--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,32 @@
-﻿asgiref==3.9.1
+asgiref==3.9.1
+attrs==25.4.0
+autobahn==25.10.2
+Automat==25.4.16
+cffi==2.0.0
+click==8.3.0
+constantly==23.10.4
+cryptography==46.0.3
+daphne==4.2.1
 Django==5.2.5
 django-bootstrap5==25.2
+h11==0.16.0
+hyperlink==21.0.0
+idna==3.11
+incremental==24.7.2
 Jinja2==3.1.6
 MarkupSafe==3.0.2
+pillow==11.3.0
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+pycparser==2.23
+pyOpenSSL==25.3.0
+python-decouple==3.8
+service-identity==24.2.0
+setuptools==80.9.0
 sqlparse==0.5.3
+Twisted==25.5.0
+txaio==25.9.2
+typing_extensions==4.15.0
 tzdata==2025.2
+uvicorn==0.38.0
+zope.interface==8.0.1
