--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
+anyio==4.11.0
 asgiref==3.9.1
 attrs==25.4.0
 autobahn==25.10.2
 Automat==25.4.16
+certifi==2025.10.5
 cffi==2.0.0
 click==8.3.0
 constantly==23.10.4
@@ -10,6 +12,8 @@ daphne==4.2.1
 Django==5.2.5
 django-bootstrap5==25.2
 h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
 hyperlink==21.0.0
 idna==3.11
 incremental==24.7.2
@@ -23,6 +27,7 @@ pyOpenSSL==25.3.0
 python-decouple==3.8
 service-identity==24.2.0
 setuptools==80.9.0
+sniffio==1.3.1
 sqlparse==0.5.3
 Twisted==25.5.0
 txaio==25.9.2
